@@ -970,7 +970,7 @@ void spoton::slotPrepareSMP(void)
     return; // Not allowed!
 
   QString guess("");
-  spoton_virtual_keyboard dialog(this);
+  spoton_virtual_keyboard dialog(QApplication::activeWindow());
 
   if(dialog.exec() == QDialog::Accepted)
     guess = dialog.m_ui.passphrase->text();
@@ -1257,4 +1257,217 @@ void spoton::slotSetSBReadInterval(void)
   }
 
   QSqlDatabase::removeDatabase(connectionName);
+}
+
+void spoton::slotShareStarBeam(void)
+{
+  QString error("");
+  spoton_crypt *crypt = m_crypts.value("chat", 0);
+
+  if(!crypt)
+    {
+      error = tr("Invalid spoton_crypt object. This is a fatal flaw.");
+      showError(error);
+      return;
+    }
+
+  if(m_kernelSocket.state() != QAbstractSocket::ConnectedState)
+    {
+      error = tr("The interface is not connected to the kernel.");
+      showError(error);
+      return;
+    }
+  else if(!m_kernelSocket.isEncrypted())
+    {
+      error = tr("The connection to the kernel is not encrypted.");
+      showError(error);
+      return;
+    }
+
+  QModelIndexList list(m_ui.participants->selectionModel()->
+		       selectedRows(1)); // OID
+
+  if(list.size() != 1)
+    {
+      error = tr("Please select only one participant for warp StarBeams.");
+      showError(error);
+      return;
+    }
+
+  QString keyType
+    (list.value(0).data(Qt::ItemDataRole(Qt::UserRole + 1)).toString());
+
+  if(keyType != "chat")
+    {
+      error = tr("Please do not select Poptastic participants for "
+		 "warp StarBeams.");
+      showError(error);
+      return;
+    }
+
+  /*
+  ** Select a file.
+  */
+
+  QFileDialog dialog(QApplication::activeWindow());
+
+  dialog.setWindowTitle(tr("%1: Select StarBeam Transmit File").
+			arg(SPOTON_APPLICATION_NAME));
+  dialog.setFileMode(QFileDialog::ExistingFile);
+  dialog.setDirectory(QDir::homePath());
+  dialog.setLabelText(QFileDialog::Accept, tr("&Select"));
+  dialog.setAcceptMode(QFileDialog::AcceptOpen);
+#ifdef Q_OS_MAC
+#if QT_VERSION < 0x050000
+  dialog.setAttribute(Qt::WA_MacMetalStyle, false);
+#endif
+#endif
+
+  if(dialog.exec() != QDialog::Accepted)
+    return;
+
+  QFileInfo fileInfo(dialog.selectedFiles().value(0));
+
+  if(!fileInfo.exists() || !fileInfo.isReadable())
+    {
+      error = tr("The selected file is not readable.");
+      showError(error);
+      return;
+    }
+
+  /*
+  ** Create a StarBeam magnet.
+  */
+
+  QByteArray eKey(spoton_crypt::strongRandomBytes(spoton_crypt::
+						  cipherKeyLength("aes256")).
+		  toBase64());
+  QByteArray mKey(spoton_crypt::strongRandomBytes(512).toBase64());
+  QByteArray magnet;
+  bool ok = true;
+
+  magnet.append("magnet:?");
+  magnet.append("ct=aes256&");
+  magnet.append("ek=");
+  magnet.append(eKey);
+  magnet.append("&");
+  magnet.append("ht=sha512&");
+  magnet.append("mk=");
+  magnet.append(mKey);
+  magnet.append("&");
+  magnet.append("xt=urn:starbeam");
+  m_ui.message->setText(magnet);
+  sendMessage(&ok);
+
+  if(!ok)
+    return;
+
+  QString connectionName("");
+
+  /*
+  ** Create a StarBeam database entry.
+  */
+
+  {
+    QSqlDatabase db = spoton_misc::database(connectionName);
+
+    db.setDatabaseName(spoton_misc::homePath() + QDir::separator() +
+		       "starbeam.db");
+
+    if(db.open())
+      {
+	QByteArray encryptedMosaic;
+	QByteArray mosaic(spoton_crypt::strongRandomBytes(64).toBase64());
+	QSqlQuery query(db);
+
+	query.prepare("INSERT INTO transmitted "
+		      "(file, hash, missing_links, mosaic, nova, "
+		      "position, pulse_size, "
+		      "status_control, total_size) "
+		      "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)");
+	query.bindValue
+	  (0, crypt->
+	   encryptedThenHashed(fileInfo.absoluteFilePath().toUtf8(),
+			       &ok).toBase64());
+
+	if(ok)
+	  query.bindValue
+	    (1, crypt->
+	     encryptedThenHashed
+	     (spoton_crypt::
+	      sha1FileHash(fileInfo.absoluteFilePath()).toHex(),
+	      &ok).toBase64());
+
+	if(ok)
+	  query.bindValue
+	    (2, crypt->
+	     encryptedThenHashed(QByteArray(), &ok).toBase64());
+
+	if(ok)
+	  {
+	    encryptedMosaic = crypt->encryptedThenHashed(mosaic, &ok);
+
+	    if(ok)
+	      query.bindValue(3, encryptedMosaic.toBase64());
+	  }
+
+	if(ok)
+	  query.bindValue
+	    (4, crypt->encryptedThenHashed(QByteArray(), &ok).toBase64());
+
+	if(ok)
+	  query.bindValue
+	    (5, crypt->encryptedThenHashed("0", &ok).toBase64());
+
+	if(ok)
+	  query.bindValue
+	    (6, crypt->
+	     encryptedThenHashed(QByteArray::number(30000),
+				 &ok).toBase64());
+
+	query.bindValue(7, "transmitting");
+
+	if(ok)
+	  query.bindValue
+	    (8, crypt->
+	     encryptedThenHashed(QByteArray::number(fileInfo.size()),
+				 &ok).toBase64());
+
+	if(ok)
+	  query.exec();
+
+	query.prepare("INSERT INTO transmitted_magnets "
+		      "(magnet, magnet_hash, transmitted_oid) "
+		      "VALUES (?, ?, (SELECT OID FROM transmitted WHERE "
+		      "mosaic = ?))");
+
+	if(ok)
+	  query.bindValue
+	    (0, crypt->
+	     encryptedThenHashed(magnet, &ok).toBase64());
+
+	if(ok)
+	  query.bindValue
+	    (1, crypt->keyedHash(magnet, &ok).toBase64());
+
+	if(ok)
+	  query.bindValue(2, encryptedMosaic.toBase64());
+
+	if(ok)
+	  query.exec();
+      }
+
+    db.close();
+  }
+
+  QSqlDatabase::removeDatabase(connectionName);
+}
+
+void spoton::showError(const QString &error)
+{
+  if(error.isEmpty())
+    return;
+
+  QMessageBox::critical(QApplication::activeWindow(), tr("%1: Error").
+			arg(SPOTON_APPLICATION_NAME), error);
 }
